# ChangeLog for dev-python/isodate
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  07 Jun 2011; James Rowe <jnrowe@gmail.com> isodate-0.4.4.ebuild:
  Keyworded amd64.

*isodate-0.4.4 (09 May 2011)

  09 May 2011; James Rowe <jnrowe@gmail.com> +isodate-0.4.4.ebuild:
  Version bump [351].

  07 May 2011; James Rowe <jnrowe@gmail.com> isodate-0.4.3.ebuild:
  Restrict Python 3.

  15 Jan 2011; James Rowe <jnrowe@gmail.com> isodate-0.4.3.ebuild:
  Keyworded x86.

  15 Jan 2011; James Rowe <jnrowe@gmail.com> isodate-0.4.3.ebuild:
  Keyworded amd64.

  12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added watch file for package updates.

  16 Dec 2010; James Rowe <jnrowe@gmail.com> isodate-0.4.3.ebuild:
  Keyworded ~x86.

*isodate-0.4.3 (16 Dec 2010)

  16 Dec 2010; James Rowe <jnrowe@gmail.com> +isodate-0.4.3.ebuild,
  +metadata.xml:
  Initial ebuild, by me [242].
