@@ -1,17 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST isodate-0.4.3.tar.gz 15414 RMD160 bf99584797d27c8f9b5c5313dbf0de6c8c4ec630 SHA1 88ce5451087b5665b7d2f7613ff951511bc47a05 SHA256 79ad61ec0999e84d327a723872983c3617640a945bc49a87efb5f9ab64f0ebc0
 DIST isodate-0.4.4.tar.gz 18012 RMD160 73cebc9e5c24bb29a3d304c8cc53e819b4664248 SHA1 e9e60b2483d0e9b877c5e52dc3930811448ffc0e SHA256 dbe0970abc3081e7d7aa43d4c5ff4a3166db9ca779367a2091bceed40c67ff01
-EBUILD isodate-0.4.3.ebuild 458 RMD160 261fc3b37c10a8b0304a5892fbd45688c8d3ee8f SHA1 fb78dffaa26382c93bcc4b04f7bbf401e9b4a6c2 SHA256 7f50feba8d0c9f1dec3a641b28ee5b17ed1facba2ec83e1d75728eb33ea2b333
-EBUILD isodate-0.4.4.ebuild 459 RMD160 bfd179365bc91dd1d8667f08b1d088b45e246d28 SHA1 69f7b3d08bf3eeed2448d9bb619c16d7ae85ea96 SHA256 6fc09deb64b714948588301db80c82db2031c3afc58f9a8a97a715f8082f47a4
-MISC ChangeLog 915 RMD160 85ce720029e2b1778f0a3de3d0566dde6cae3e7c SHA1 2569218ebdc8145d769e49c520b9450fecf8ce3a SHA256 eb81543ecb68c08cb02c82b20037cf8e79e973dda1ce10fe4333959945094d06
+EBUILD isodate-0.4.4.ebuild 458 RMD160 261fc3b37c10a8b0304a5892fbd45688c8d3ee8f SHA1 fb78dffaa26382c93bcc4b04f7bbf401e9b4a6c2 SHA256 7f50feba8d0c9f1dec3a641b28ee5b17ed1facba2ec83e1d75728eb33ea2b333
+MISC ChangeLog 1025 RMD160 2bdad4da58ab63bb8b916a69664f94beaa02c8ed SHA1 42816b82463da8a0b7abf825aaaf06c810c4bdca SHA256 62e3866bdd2c971307b0c81a612dcd3595bce10200c5016c45f9d12dc5295ce5
 MISC metadata.xml 1451 RMD160 21949cb02df2fd85de689361fb6a20e442996480 SHA1 9d96380a051a26296bdbc2104ca619389400025c SHA256 0e2f155aa0322fa3c30cb0a707042c9b491fdc14596045cdc21d82c91f9969fb
 MISC watch 12 RMD160 93a2adec9e10f09240c494996f1b879ab1a61113 SHA1 d61fd79473fa9466604269b1d76a71d70ed24b7a SHA256 806ffafa2258c82b35917a67c5f7faff76604958adae5efb722ca9ef82ee2874
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk3uudkACgkQzJrj3cAXR0lwgQCdGLt4NaOAYm/iQCZwL69Pc8h1
-MZoAoKSZOheLI06uJ9qHiyMqF/P5v4fx
-=OvB/
+iEYEARECAAYFAk3vxLgACgkQzJrj3cAXR0l7UQCfQA2+eTBlTxWnQ6m7U2A4dFo7
+2bYAnjWSDob90MaqYzqoc2siRM9Z3hKp
+=6ryz
 -----END PGP SIGNATURE-----
