@@ -1,22 +1,0 @@
-dev-python/setuptools >=app-admin/eselect-python-20091230 =dev-lang/python-2*
->=app-admin/eselect-python-20091230 =dev-lang/python-2*
-0
-mirror://pypi/i/isodate/isodate-0.4.3.tar.gz
-
-http://pypi.python.org/pypi/isodate/
-BSD
-An ISO 8601 date/time/duration parser and formater
-amd64 x86
-distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
-
-
-
-
-3
-
-compile install postinst postrm prepare
-
-
-
-
-
