@@ -6,7 +6,7 @@ mirror://pypi/i/isodate/isodate-0.4.4.tar.gz
 http://pypi.python.org/pypi/isodate/
 BSD
 An ISO 8601 date/time/duration parser and formater
-amd64 ~x86
+amd64 x86
 distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
 
 
