@@ -1,4 +1,3 @@
-* dev-python/isodate-0.4.4                   x86 SCHEDULED: <2011-06-08 Wed>
 * dev-lua/luaposix-5.1.11                    x86 SCHEDULED: <2011-06-08 Wed>
 * media-gfx/seqdiag-0.3.1                    x86 SCHEDULED: <2011-06-08 Wed>
 * dev-python/lettuce-0.1.27                  x86 SCHEDULED: <2011-06-08 Wed>
