@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  08 Jun 2011; James Rowe <jnrowe@gmail.com> -isodate-0.4.3.ebuild,
+  isodate-0.4.4.ebuild:
+  Keyworded x86.
+
   07 Jun 2011; James Rowe <jnrowe@gmail.com> isodate-0.4.4.ebuild:
   Keyworded amd64.
 
